applications/log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output
          image: reyver/log-output:3.2-amd64
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: config-volume
              mountPath: /usr/src/app/config
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: log-output-config
